# minilzf

./: CMakeLists.txt  LICENSE  README  liblzf-config.cmake.in  liblzf.pc.in  lzf.c  lzf.h
.github/workflows/: cmake.yml
